test(domain): 이동표 정규화(절차 7) 회귀 테스트 신설 및 locations 순회 순서 보존
Stage 1 구현 검토 후속:

- T20 `normalizesTravelMatrix` 신설 (stage-01 §7). 종전에는 T1~T19가 전부
  `travelEntries`에 빈 목록을 넘겨 **절차 7의 루프 본문이 한 번도 실행되지
  않았다** — `Units`를 직접 부르는 T3은 관문 배선을 덮지 못한다. self arc를
  단위 검증 **앞에서** 건너뛰는 순서는 실물 wire의 self arc 453건(D=9999)이
  접수되는 전제인데 회귀 장치가 없던 자리다. 건너뛰기를 D/U 읽기 뒤로 옮기면
  이 테스트만 깨지는 것을 확인했다.

- `Plan.locations`를 `Map.copyOf`에서 삽입 순서 보존으로. `Map.copyOf`의 순회
  순서는 JVM 실행마다 흔들리므로, Stage 2가 이 맵으로 이동표 색인을 매기면 같은
  입력이 실행마다 다른 색인을 받는다. 정규화의 삽입 순서(차고 → 주문 side)를
  계약으로 올렸다 (stage-01 §2.2).

- Domain §3.1: 표기 기준 소수 거부의 적용 대상을 이동표 `D`·`U` 두 필드로 한정
  (시스템 소유자 확정). `duration`·`taskTime`·`maxDrive*`는 raw가 `long`이라
  표기가 남지 않아 판정이 구조적으로 불가능하다는 사실을 명시한 것 — 규칙 완화가
  아니라 적용 범위의 확정이다.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>