@@ -1,5 +1,7 @@
 package com.ronext.rpdptw.domain;
 
+import java.util.Collections;
+import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -26,7 +28,9 @@ public record Plan(
         depots = List.copyOf(depots);
         requests = List.copyOf(requests);
         vehicles = List.copyOf(vehicles);
-        locations = Map.copyOf(locations);
+        // Map.copyOf는 순회 순서를 JVM 실행마다 흔든다 — Stage 2가 이 맵으로 색인을 매기므로
+        // 같은 입력이 다른 색인을 받는다. 정규화의 삽입 순서(차고 → 주문 side)를 보존한다.
+        locations = Collections.unmodifiableMap(new LinkedHashMap<>(locations));
         travelEntries = List.copyOf(travelEntries);
         Objects.requireNonNull(deliveryPolicy, "deliveryPolicy");
     }
